# webrtc_server

cpp/xrtcserver/: CMakeLists.txt  build.sh
cpp/xrtcserver/conf/: general.yaml  signaling_server.yaml
cpp/xrtcserver/src/: main.cpp  xrtcserver_def.h
cpp/xrtcserver/src/base/: async_udp_socket.cpp  async_udp_socket.h  conf.cpp  conf.h  event_loop.cpp  event_loop.h  lock_free_queue.h  log.cpp  log.h  network.cpp  network.h  socket.cpp  socket.h  xhead.h
cpp/xrtcserver/src/ice/: candidate.cpp  candidate.h  ice_agent.cpp  ice_agent.h  ice_connection.cpp  ice_connection.h  ice_connection_info.h  ice_controller.cpp  ice_controller.h  ice_credentials.cpp  ice_credentials.h  ice_def.cpp  ice_def.h  ice_transport_channel.cpp  ice_transport_channel.h  port_allocator.cpp  port_allocator.h  stun.cpp  stun.h  stun_request.cpp  stun_request.h  udp_port.cpp  udp_port.h
cpp/xrtcserver/src/pc/: codec_info.h  dtls_transport.cpp  dtls_transport.h  peer_connection.cpp  peer_connection.h  session_description.cpp  session_description.h  transport_controller.cpp  transport_controller.h
cpp/xrtcserver/src/server/: rtc_server.cpp  rtc_server.h  rtc_worker.cpp  rtc_worker.h  signaling_server.cpp  signaling_server.h  signaling_worker.cpp  signaling_worker.h  tcp_connection.cpp  tcp_connection.h
cpp/xrtcserver/src/stream/: push_stream.cpp  push_stream.h  rtc_stream.cpp  rtc_stream.h  rtc_stream_manager.cpp  rtc_stream_manager.h
screen_share/: build.sh
screen_share/src/: main.go
screen_share/static/: screen_share.html
signaling/conf/: framework.conf  (+2 more)
signaling_copy/: go.mod
(+254 files in other folders)
